<resources>
    <string name="app_name">ECommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">product</string>
    <string name="price">price</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="saleprice">salePrice</string>
    <string name="total_price">Total Price</string>
    <string name="pay_now">Pay Now</string>
    <string name="titile">titile</string>
    <string name="category">category</string>
    <string name="category_name">category Name</string>
    <string name="my_cart">My Cart</string>
    <string name="amour">AMOUR</string>
    <string name="my_profile">My Profile</string>
    <string name="search">Search</string>
    <string name="sign_in_info">Didn’t have an account?</string>
</resources>