<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productDetail.ProductDetailFragment">

    <ImageView
        android:id="@+id/productDetailIv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_background"
        android:background="@drawable/detail_card_corners"/>

    <TextView
        android:id="@+id/productDetailtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/product"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productDetailIv" />

    <TextView
        android:id="@+id/priceTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/price"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDetailtv" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="description"
        android:textAlignment="textStart"
        android:layout_marginLeft="@dimen/margin_32dp"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTv" />

    <Button
        android:id="@+id/AddToCartbutton"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTv"
        android:layout_marginTop="@dimen/margin_32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>