<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:background="@drawable/corners_product_item">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/beige">

                <ImageView
                    android:id="@+id/cartProductIv"
                    android:layout_width="@dimen/width_92dp"
                    android:layout_height="@dimen/height_92dp"
                    android:layout_margin="@dimen/margin_8dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_background" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/beige">

                <TextView
                    android:id="@+id/cartProductNameTv"
                    style="@style/h3_text_style"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="@string/product_name"
                    app:layout_constraintBottom_toTopOf="@+id/priceTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/priceTv"
                    style="@style/h4_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:text="@string/price"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cartProductNameTv" />

                <TextView
                    android:id="@+id/salePriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saleprice"
                    android:textSize="@dimen/text_size_16sp"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toEndOf="@id/priceTv"
                    android:layout_marginStart="@dimen/margin_8dp"
                    app:layout_constraintTop_toBottomOf="@+id/cartProductNameTv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"/>

                <ImageView
                    android:id="@+id/cartDeleteIv"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:layout_marginBottom="@dimen/margin_4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_delete" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>