<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    android:background="@drawable/corners_product_item"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@color/beige">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/beige">

            <ImageView
                android:id="@+id/saleProductIv"
                android:layout_width="150dp"
                android:layout_height="170dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background"
                android:layout_marginBottom="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_4dp"/>

            <TextView
                android:id="@+id/saleProductNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saleProductIv"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_32dp"/>

            <RatingBar
                android:id="@+id/saleProductRatingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:progressTint="@color/yellow"
                android:secondaryProgressTint="#00000000"
                android:stepSize="0.1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saleProductNameTv" />

            <TextView
                android:id="@+id/priceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saleProductRatingBar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_4dp"/>

            <TextView
                android:id="@+id/salePriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saleprice"
                android:textSize="@dimen/text_size_16sp"
                android:textAlignment="textStart"
                app:layout_constraintStart_toEndOf="@id/priceTv"
                android:layout_marginStart="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@+id/saleProductRatingBar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"/>

            <ImageView
                android:id="@+id/favoriteIv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/padding_8dp"
                android:background="@drawable/corner_favorite_item"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>